# CAL-DPDK-GEM5

./: .gitattributes  .gitignore  Dockerfile  README.md
.devcontainer/: devcontainer.json
applications/memcached_kernel/: CMakeLists.txt  memcached_client.cc  memcached_client.h
applications/memcached_kernel/traces/: memcached.pcap
applications/minimal_networking_app/: Makefile  README.md  sample_app.cc
buildroot/: Config.in  external.desc  external.mk  linux.config
buildroot/configs/: gem5_defconfig
buildroot/overlay/etc/: inittab
buildroot/overlay/sbin/: m5
buildroot/package/dpdk/: Config.in  dpdk.mk
gem5/: SConstruct
gem5/configs/common/: CacheConfig.py  Caches.py  FSConfig.py  Options.py
gem5/configs/example/: fs.py
gem5/src/: SConscript
gem5/src/base/: chunk_generator.hh
gem5/src/cpu/: BaseCPU.py
gem5/src/dev/: SConscript  dma_device.cc  dma_device.hh
gem5/src/mem/: DdioBridge.py  SConscript  XBar.py  coherent_xbar.cc  ddio_bridge.cc  ddio_bridge.hh  packet.hh  port.hh  snoop_filter.cc  snoop_filter.hh
gem5/src/sim/: Root.py  (+1 more)
guest-scripts/: chkp.rcS  dpdk-1.sh  dpdk-2.sh  dpdk-4.sh  dpdk-5.sh  dpdk-6.sh  dpdk-7.sh  iperf-1.sh  iperf-2.sh  iperf-4.sh  iperf-5.sh  iperf-6.sh  iperf-7.sh  memcached_kernel.sh  memcached_kernel_arp.sh  nothing.rcS
resources/: boot.arm64  reqs.pcap  rootfs.ext2  setup.pcap  vmlinux
run-scripts/: all-dpdk-tests.sh  all-kern-tests.sh  gem5-dist-condor.sh  iperf-dist.sh  l2fwd-ckp.sh  memcached-kernel.sh  plotter.py  run-2-nodes_chkp.sh  run-dist-gem5.sh  run-loadgen.sh  run-memcaced-exps.sh
(+57 files in other folders)
